update front-end and add api agents
